--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,8 +6,6 @@ body {
   font-family: var(--font-sans);
 }
 
-
-
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -64,11 +62,9 @@ body {
   }
 }
 
-
-
 @layer base {
   * {
-    @apply border-border;
+    @apply border-[hsl(var(--border))];
   }
   body {
     @apply bg-background text-foreground;
