--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -68,5 +68,6 @@ body {
   }
   body {
     @apply bg-[hsl(var(--background))] text-[hsl(var(--foreground))];
+    font-feature-settings: "rlig" 1, "calt" 1;
   }
 }
